--- a/logout.html
+++ b/logout.html
@@ -9,7 +9,7 @@
   <center>
     <h1 style="color: blue; font-size: 60px; font-family: 'Courier New', Courier, monospace;"></h1>
 
-    <div style="background-color: rgb(254, 255, 255); width: 65vh; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; border-radius: 8px;"><br>
+    <div style="background-color: rgb(169, 169, 251);; width: 65vh; box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; border-radius: 55px;"><br>
 
       <h1>✅️</h1>
       <h1>Logged out Succesfully</h1>
@@ -18,7 +18,7 @@
       <h2>😊Visit Again😊</h2>
       <br><br>
 
-      <a href="login.html" style="color: rgb(66, 189, 213); text-decoration: none;">Login</a><br><br>
+      <a href="login.html" style="color: rgb(6, 18, 248); text-decoration: none; font-weight: 700;">Login</a><br><br>
     </div>
 </body>
 </html>
