--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <form action="login.html">
     <center>
       <br><br>
-    <div style="background-color: rgb(254, 255, 255); width: 65vh; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; border-radius: 8px;">
+    <div style="background-color: rgb(169, 169, 251);; width: 65vh; box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; border-radius: 55px;">
      <br>
       <h2>Create a new account</h2>
       <hr>
     <br>
       <label for="e1"></label>
-      <input type="text" placeholder="First name" required id="e1"><br><br>
+      <input type="text" placeholder="First name" required id="e1" style="width: 200px; height: 30px; border-radius: 20px; border: none; "><br><br>
       <label for="e2"></label>
-      <input type="text" placeholder="Surname" required id="e2"><br><br>
+      <input type="text" placeholder="Surname" required id="e2" style="width: 200px; height: 30px; border-radius: 20px; border: none;"><br><br>
       <label for="e3">Date of birth</label>
-      <input type="date" id="e3" required><br><br>
+      <input type="date" id="e3" required style="width: 120px; height: 30px; border-radius: 20px; border: none; text-align: center;"><br><br>
       <label for="">Gender:</label>
       <input type="radio" id="male" name="gender" value="male" required>
       <label for="male">Male</label>
@@ -28,17 +28,16 @@
       <label for="female">Female</label><br><br>
 
       <label for="email"></label>
-      <input type="email" placeholder="email address" pattern="[a-z0-9._]+@[a-z]+\.[a-z]{2,4}" title="Username must contain letters and numbers only, and be at least 3 characters long" id="email" required style="width: 200px; height: 20px;"><br><br>
+      <input type="email" placeholder="email address" pattern="[a-z0-9._]+@[a-z]+\.[a-z]{2,4}" title="Username must contain letters and numbers only, and be at least 3 characters long" id="email" required style="width: 200px; height: 30px; border-radius: 20px; border: none;"><br><br>
 
       <label for="password"></label>
-      <input type="password" placeholder="New Password" id="password" Pattern="[A-Za-z!@#$%^&*0-9]{8,}" title="At least 8 characters long, consisting of uppercase, lowercase, special characters, and digits" required style="width: 200px; height: 20px;"><br><br>
+      <input type="password" placeholder="New Password" id="password" Pattern="[A-Za-z!@#$%^&*0-9]{8,}" title="At least 8 characters long, consisting of uppercase, lowercase, special characters, and digits" required style="width: 200px; height: 30px; border-radius: 20px; border: none;"><br><br><br>
 
-      <a href="login.html">
-        <input type="submit" value="Sign Up" required style="background-color: rgb(74, 156, 181); color: white; font-weight: 700; width: 150px; padding: 5px; border-radius: 5px;">
-      </a>
+        <input type="submit" value="Sign Up" required style="background-color: #0883fe; color: white; font-weight: 700; height: 32px; width: 130px; padding: 5px; border-radius: 15px; cursor: pointer; border: none;" formaction="login.html">
+  
       <br><br>
       
-      <a href="login.html" style="color: rgb(93, 156, 148); text-decoration: none;">Already have an account? Sign in</a><br><br>
+      <a href="login.html" style="color: rgb(15, 52, 239); text-decoration: none;">Already have an account? Sign in</a><br><br>
     </div>
   </center>
 </form>
