--- a/login.html
+++ b/login.html
@@ -10,21 +10,22 @@
     <center>
     <br><br><br>
   
-      <div style="background-color: rgb(254, 255, 255); width: 65vh; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; border-radius: 8px;"><br>
-        <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Log in to your account</p>
+      <div style="background-color: rgb(169, 169, 251);; width: 65vh; box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; border-radius: 55px;"><br>
+
+        <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif f">Log in to your account</p><br>
 
         <label for="username"></label>
-        <input type="email" id="username" placeholder="Email address or phone number" pattern="[a-z0-9._]+@[a-z]+\.[a-z]{2,4}" title="Username must contain letters and numbers only, and be at least 3 characters long"  required  style="width: 300px; height: 38px; border-radius: 5px;"><br><br>
+        <input type="email" id="username" placeholder="Email address or phone number" pattern="[a-z0-9._]+@[a-z]+\.[a-z]{2,4}" title="Username must contain letters and numbers only, and be at least 3 characters long"  required  style="width: 300px; height: 38px; border-radius: 20px; border: none;"><br><br>
         
         <label for="password"></label>
-        <input type="password" Pattern="[A-Za-z!@#$%^&*0-9]{8,}" title="At least 8 characters long, consisting of uppercase, lowercase, special characters, and digits"  name="password" id="password" required placeholder="Password" style="width: 300px; height: 38px; border-radius: 5px;"><br><br>
+        <input type="password" Pattern="[A-Za-z!@#$%^&*0-9]{8,}" title="At least 8 characters long, consisting of uppercase, lowercase, special characters, and digits"  name="password" id="password" required placeholder="Password" style="width: 300px; height: 38px; border-radius: 20px; border: none;"><br><br><br>
   
         <a href="succesfully.html">
-          <input type="submit" value="Log in" required style="width: 300px; height: 38px; border-radius: 5px; background-color: rgb(74, 156, 181); color: white; font-weight: 700;">
+          <input type="submit" value="Log in" required style="background-color: #0883fe; color: white; font-weight: 700; height: 38px; width: 300px; padding: 5px; border-radius: 20px; cursor: pointer; border: none;" font-weight: 700;">
         </a>
         <br><br>
-        <a href="reset.html" style="text-decoration: none;  color: #6cbfbc;">Forgot Password? </a><br><br>
-        <a href="index.html" style="text-decoration: none;  color: #74c8c8;">Sign up</a>
+        <a href="reset.html" style="text-decoration: none;  color: #0707f3;">Forgot Password? </a><br><br>
+        <a href="index.html" style="text-decoration: none;  color: #120af9;">Sign up</a>
         <br><br>
       </div>
     </form>
