--- a/login_succesful.html
+++ b/login_succesful.html
@@ -9,7 +9,7 @@
   <center>
   <br><br><br>
 
-    <div style="background-color: rgb(254, 255, 255); width: 65vh; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; border-radius: 8px;"><br>
+    <div style="background-color: rgb(169, 169, 251);; width: 65vh; box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; border-radius: 55px;"><br>
 
       <h1>✅️</h1>
       <h1>Logged in Succesfully</h1>
@@ -17,7 +17,7 @@
       <h2>Happy Browsing ✌</h2>
       <br><br><br>
 
-      <a href="logout.html" style="color: rgb(83, 201, 207); text-decoration: none;">Logout</a><br><br>
+      <a href="logout.html" style="color: rgb(6, 18, 248); text-decoration: none; font-weight: 700;">Logout</a><br><br>
     </div>
 </body>
 </html>
