--- a/reset.html
+++ b/reset.html
@@ -9,25 +9,25 @@
   <form action="login.html">
   <center>
     <br><br><br>
-    <div style="background-color: rgb(254, 255, 255); width: 65vh; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; border-radius: 8px;"><br>
-      <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Reset Password</p>
+    <div style="background-color: rgb(169, 169, 251);; width: 65vh; box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; border-radius: 55px;"><br>
+      <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Reset Password</p><br>
 
       <label for="h1"></label>
-      <input type="password" placeholder="Old Password" Pattern="[A-Za-z!@#$%^&*0-9]{8,}" title="At least 8 characters long, consisting of uppercase, lowercase, special characters, and digits" required id="h1" style="width: 300px; height: 38px; border-radius: 5px;"><br><br>
+      <input type="password" placeholder="Old Password" Pattern="[A-Za-z!@#$%^&*0-9]{8,}" title="At least 8 characters long, consisting of uppercase, lowercase, special characters, and digits" required id="h1" style="width: 300px; height: 38px; border-radius: 20px; border: none;"><br><br>
 
       <label for="h2"></label>
-      <input type="password" placeholder="enter new Password" Pattern="[A-Za-z!@#$%^&*0-9]{8,}" title="At least 8 characters long, consisting of uppercase, lowercase, special characters, and digits" required id="h2" style="width: 300px; height: 38px; border-radius: 5px;"><br><br>
+      <input type="password" placeholder="enter new Password" Pattern="[A-Za-z!@#$%^&*0-9]{8,}" title="At least 8 characters long, consisting of uppercase, lowercase, special characters, and digits" required id="h2" style="width: 300px; height: 38px; border-radius: 20px; border: none;"><br><br>
 
       <label for="h2"></label>
-      <input type="password"  id="h2" Pattern="[A-Za-z!@#$%^&*0-9]{8,}" title="At least 8 characters long, consisting of uppercase, lowercase, special characters, and digits" required placeholder="confirm new Password" style="width: 300px; height: 38px; border-radius: 5px;"><br><br>
+      <input type="password"  id="h2" Pattern="[A-Za-z!@#$%^&*0-9]{8,}" title="At least 8 characters long, consisting of uppercase, lowercase, special characters, and digits" required placeholder="confirm new Password" style="width: 300px; height: 38px; border-radius: 20px; border: none;"><br><br>
 
       <a href="index.html">
-        <input type="submit" value="Reset Password" required style="width: 300px; height: 38px; border-radius: 5px; background-color: rgb(74, 156, 181); color: white; font-weight: 700;">
+        <input type="submit" value="Reset Password" required style="background-color: #0883fe; color: white; font-weight: 700; height: 38px; width: 300px; padding: 5px; border-radius: 15px; cursor: pointer; border: none;">
       </a>
       
       <br><br>
     
-      <a href="index.html" style="text-decoration: none;  color: #50a3a3;">Sign up</a>
+      <a href="index.html" style="text-decoration: none;  color: #3306f9;">Sign up</a>
       <br><br>
     </div>
   </form>
